--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,4 +9,4 @@ The app may display advertisements from third-party advertising services. They m
 
 Contact us
 
-If you have any questions about this privacy policy, please contact us by [provide contact information].
+If you have any questions about this privacy policy, please contact us by [nikavpnapps@gmail.com].
