--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,12 +1,1 @@
-Privacy Policy for Offline WhatsApp Sticker Maker App
-
-This privacy policy sets out how we uses and protects any information collected through the use of our Offline WhatsApp Sticker Maker App.
-
-We do not collect any personal information from users of our app. The app is designed to work offline, and does not require or collect any user data.
-
-The app may display advertisements from third-party advertising services. They may collect information about your device and use of the app, including but not limited to IP address, device information, and app usage data, to serve personalized advertisements.
-
-
-Contact us
-
-If you have any questions about this privacy policy, please contact us by [nikavpnapps@gmail.com].
+<h3 style="text-align: left;">Privacy Policy for Offline WhatsApp Sticker Maker App</h3><p>This privacy policy sets out how we uses and protects any information collected through the use of our Offline WhatsApp Sticker Maker App.</p><p>We do not collect any personal information from users of our app. The app is designed to work offline, and does not require or collect any user data.</p><p>The app may display advertisements from third-party advertising services. They may collect information about your device and use of the app, including but not limited to IP address, device information, and app usage data, to serve personalized advertisements.</p><h3 style="text-align: left;">Contact us</h3><p>If you have any questions about this privacy policy, please contact us at: <a href="mailto:nikavpnapps@gmail.com">nikavpnapps@gmail.com</a>.</p>
